# cmake-gtest-docker-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  test.cpp
